校对小错误

--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/12.natural-creativity-cycle-zi-ran-chuang-zao-li-zhou-qi.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/12.natural-creativity-cycle-zi-ran-chuang-zao-li-zhou-qi.md
@@ -169,7 +169,7 @@ The same idea may be represented by a different set of neurons in a different pa
 
 **Octants 3-4** will mirror Octants 1-2 in individuals who take a recommended mid-day nap. Naps bring the homeostatic learning capacity back to the baseline. In other words, well executed naps eliminate the network fatigue effect. Biphasic sleepers benefit of maximum creativity, alertness and learning performance in two octants in a single cycle: Octant 1 and Octant 3. In monophasic sleepers, the evening creative mode is undermined by network fatigue, and most of the improved alertness and learning capacity comes from the [impact of circadian variables on the brain](http://super-memory.com/articles/sleep.htm#Monophasic_sleep_with_biphasic_learning). Even if you do not sleep at siesta time, the brain experiences an evening revival after the mid-day slump. The picture assumes that siesta has restored the full creative mode and the main difference between Octant 1 and Octant 3 is that, in the evening, the period of prolific creativity will build upon newly formed structures of knowledge inherited from the first half of the waking day.
 
-**八分圆之三四**将如同八分圆之一二，如果个体进行了推荐的午睡。午睡使自稳态学习能力恢复到基线水平。换句话说，良好执行的午睡消除了网络疲劳效应。双相睡眠者在一个周期中的两个八分圆：八分圆之一和八分圆之三中最大限度地发挥创造力、警觉性和学习能力。在单相睡眠者中，夜间的创造模式受到网络疲劳的破坏，大部分提高的警觉性和学习能力来自于[昼夜变化对大脑的影响](http://super-memory.com/articles/sleep.htm#Monophasic_sleep_with_biphasic_learning)。即使你在午睡时不睡觉，在午休之后，大脑也会经历一次晚上的复苏。这幅图假设午睡已经恢复了完全的创造模式，八分圆之一和八分圆之三之间的主要区别是，在晚上，多产的创造力将建立在从醒着的一天的前半部分继承下来的新的知识结构之上。
+**八分圆之三和四**将如同八分圆之一和二，如果个体进行了推荐的午睡。午睡使自稳态学习能力恢复到基线水平。换句话说，良好执行的午睡消除了网络疲劳效应。双相睡眠者在一个周期中的两个八分圆：八分圆之一和八分圆之三中最大限度地发挥创造力、警觉性和学习能力。在单相睡眠者中，夜间的创造模式受到网络疲劳的破坏，大部分提高的警觉性和学习能力来自于[昼夜变化对大脑的影响](http://super-memory.com/articles/sleep.htm#Monophasic_sleep_with_biphasic_learning)。即使你在午睡时不睡觉，在午休之后，大脑也会经历一次晚上的复苏。这幅图假设午睡已经恢复了完全的创造模式，八分圆之一和八分圆之三之间的主要区别是，在晚上，多产的创造力将建立在从醒着的一天的前半部分继承下来的新的知识结构之上。
 
 #### 12.3.2 Night
 
