--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md
@@ -903,7 +903,7 @@ If you think you are lazy about learning, you need to re-evaluate your materials
 
 Learning is a sustainable and non-addictive form of pleasure with hardly any side effects other than cost in time. In addition, good learning tends to absorb the mind, and promote more learning by boosting the [learn drive](https://supermemo.guru/wiki/Learn_drive). This means that learning should be employable as therapy in depression.
 
-学习是一种可持续的、非上瘾的快乐形式，除了时间成本外，几乎没有任何副作用。此外，良好的学习倾向于吸收大脑，并通过提高[学习内驱力](https://supermemo.guru/wiki/Learn_drive)来促进更多的学习。这意味着学习应该作为抑郁症的治疗手段。
+学习是一种可持续的、非上瘾的快乐形式，除了时间成本外，几乎没有任何副作用。此外，良好的学习倾向于增长知识，并通过提高[学习内驱力](https://supermemo.guru/wiki/Learn_drive)来促进更多的学习。这意味着学习应该作为抑郁症的治疗手段。
 
 #### 6.22.1 Learning at school
 
