--- a/History of spaced repetition/05.1988 Two component of memory.md
+++ b/History of spaced repetition/05.1988 Two component of memory.md
@@ -1,16 +1,14 @@
 # 1988: Two component of memory
 
-# 1988：双组分存储器
+# 1988：记忆双组分模型
 
 [Two-component model of long-term memory](https://supermemo.guru/wiki/Two-component_model_of_long-term_memory) lays at the foundation of [SuperMemo](https://supermemo.guru/wiki/SuperMemo), and is expressed explicitly in [Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17). It differentiates between how [stable](https://supermemo.guru/wiki/Stability) knowledge is in long term memory storage, and how [easy it is to retrieve](https://supermemo.guru/wiki/Retrievability). This remains a little known and quintessential fact of the theory of learning that one can be fluent and still remember poorly.
 
 Fluency is a poor measure of learning in the long term
 
-[长期内存的双组分模型](https://supermemo.guru/wiki/two component_model_of_long-term_memory)是[SuperMemo](https://supermemo.guru/wiki/SuperMemo)的基础，并在[Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17)中明确表示。它区别于[稳定性](https://supermemo.guru/wiki/Stability)和[容易检索](https://supermemo.guru/wiki/Retrievability)。这仍然是一个鲜为人知的和典型的学习理论的事实，一个人可以流利，但仍然记得很差。
+[长期记忆的双组分模型](https://supermemo.guru/wiki/two component_model_of_long-term_memory)是 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的基础，并在 [SM-17 算法](https://supermemo.guru/wiki/Algorithm_SM-17)中明确表示。它区别于[稳定性](https://supermemo.guru/wiki/Stability)和[可检索性](https://supermemo.guru/wiki/Retrievability)。这仍然是一个鲜为人知的和典型的学习理论的事实，一个人可以流利，但仍然记得很差。
 
-
-
-从长远来看，流利度并不能很好地衡量学习效果
+从长远来看，流利度并不能很好地衡量学习效果。
 
 ## Components of long-term memory
 
@@ -34,7 +32,7 @@ Amazingly, three decades after my observations, the idea of two components of me
 
 ## Origins of the two component model of memory
 
-## 内存二组分模型的起源
+## 记忆双组分模型的起源
 
 I first described the idea of the [two components of long-term memory](https://supermemo.guru/wiki/Two_component_model_of_memory) in a paper for my computer simulations class on Jan 9, 1988. In an unrelated line of reasoning, in the same paper, I concluded that different circuits must be involved in [declarative](https://supermemo.guru/wiki/Declarative_learning) and [procedural learning](https://supermemo.guru/wiki/Procedural_learning).
 
@@ -273,175 +271,45 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 >
 > 4. In Steps 2 and 3 we have shown that *r* and *s* are independent, as there are no functions g1 and g2 such that *s*=g1(*r*) or *r*=g2(*s*). This obviously does not mean that there exists no parameter x and functions ys and yr such that *s*=ys(x) and *r*=yr(x).
 >
-> 5. It can be shown that
+> 5. It can be shown that r and s suffice to compute the optimum spacing of repetitions (cf. Eqns. (1) and (2)). Let us first assume that the two following functions f r and f s are known in the system involved in memory storage: r i =f r ( s i ) and s i =f s ( s i-1 ). In our case, these functions have a trivial form f r : r i = s i and f s : s i = s i-1 *C 2 (where C 2 is the constant from Eqn. (2)). In such a case, the variables r and s are sufficient to represent memory at any moment t in optimum spacing of repetitions. Here is a repetition spacing algorithm which shows this to be true:
 >
->     
+>       1. assume that the variables *r*i and *s*i describe the state of memory after the i-th repetition
+>   2. let there elapse *r*i time
+>       3. let there be a repetition
+>   4. let the function fs be used to compute the new value of *s*i+1 from *s*i
+>       5. let the function fr be used to compute the new value of *r*i+1 from *s*i+1
+>   6. i:=i+1
+>       7. goto 2
 >
->    r
+>    The above reasoning shows that variables *r* and *s* form a sufficient set of independent variables needed to compute the optimum spacing of repetitions. Obviously, using a set of transformation functions of the form *r*’’=Tr(*r*’) and *s*’’=Ts(*s*’), one can conceive an infinite family of variable pairs *r*-*s* that could describe the status of the memory system. A difficult choice remains to choose such a pair *r*-*s* that will most conveniently correspond with molecular phenomena occurring at the level of the synapse.
 >
->     
+>    The following terminology and interpretation is proposed by the authors in a memory system involving the existence of the *r*-*s* pair of variables: the variable R, retrievability, determines the probability with which a given memory trace can be invoked at a given moment, while the variable S, stability of memory, determines the rate of decline of retrievability as a result of forgetting, and consequently the length of inter-repetition intervals in the optimum spacing of repetitions.
 >
->    and
+>    Assuming the negatively exponential decrease of retrievability, and the interpretation of stability as a reciprocal of the retrievability decay constant, we might conveniently represent the relationship between R and S using the following formula (t denotes time):
 >
->     
+>    > (3) R=e-t/S
 >
->    s
+>    The transformation functions from the pair *r*-*s* used in Steps 1-5 of the reasoning, to the proposed interpretation R-S will look as follows (assuming the definition of the optimum inter-repetition interval as the interval that produces retention of knowledge K=0.95):
 >
->     
+>    > (4) S=-*s*/ln(K)
+>>
+>    > (5) R=e-(*s*-*r*)/S
 >
->    suffice to compute the optimum spacing of repetitions (cf. Eqns. (1) and (2)). Let us first assume that the two following functions f
+>    The relationship between the stability after the i-th repetition (Si) and the constants C1 and C2 determining the optimum spacing of repetitions as defined by Eqns. (1) and (2) can therefore be written as:
 >
->    r
+>    > (6) Si=-(C1*C2i-1)/ln(K)
 >
->     
+>    and finally, retrievability in the optimum spacing of repetitions can be expressed as:
 >
->    and f
->
->    s
->
->     
->
->    are known in the system involved in memory storage:
->
->     
->
->    r
->
->    i
->
->    =f
->
->    r
->
->    (
->
->    s
->
->    i
->
->    ) and
->
->     
->
->    s
->
->    i
->
->    =f
->
->    s
->
->    (
->
->    s
->
->    i-1
->
->    ). In our case, these functions have a trivial form f
->
->    r
->
->    :
->
->     
->
->    r
->
->    i
->
->    =
->
->    s
->
->    i
->
->     
->
->    and f
->
->    s
->
->    :
->
->     
->
->    s
->
->    i
->
->    =
->
->    s
->
->    i-1
->
->    *C
->
->    2
->
->     
->
->    (where C
->
->    2
->
->     
->
->    is the constant from Eqn. (2)). In such a case, the variables
->
->     
->
->    r
->
->     
->
->    and
->
->     
->
->    s
->
->     
->
->    are sufficient to represent memory at any moment t in optimum spacing of repetitions. Here is a repetition spacing algorithm which shows this to be true:
->
->    1. assume that the variables *r*i and *s*i describe the state of memory after the i-th repetition
->    2. let there elapse *r*i time
->    3. let there be a repetition
->    4. let the function fs be used to compute the new value of *s*i+1 from *s*i
->    5. let the function fr be used to compute the new value of *r*i+1 from *s*i+1
->    6. i:=i+1
->    7. goto 2
->
-> The above reasoning shows that variables *r* and *s* form a sufficient set of independent variables needed to compute the optimum spacing of repetitions. Obviously, using a set of transformation functions of the form *r*’’=Tr(*r*’) and *s*’’=Ts(*s*’), one can conceive an infinite family of variable pairs *r*-*s* that could describe the status of the memory system. A difficult choice remains to choose such a pair *r*-*s* that will most conveniently correspond with molecular phenomena occurring at the level of the synapse.
->
-> The following terminology and interpretation is proposed by the authors in a memory system involving the existence of the *r*-*s* pair of variables: the variable R, retrievability, determines the probability with which a given memory trace can be invoked at a given moment, while the variable S, stability of memory, determines the rate of decline of retrievability as a result of forgetting, and consequently the length of inter-repetition intervals in the optimum spacing of repetitions.
->
-> Assuming the negatively exponential decrease of retrievability, and the interpretation of stability as a reciprocal of the retrievability decay constant, we might conveniently represent the relationship between R and S using the following formula (t denotes time):
->
-> > (3) R=e-t/S
->
-> The transformation functions from the pair *r*-*s* used in Steps 1-5 of the reasoning, to the proposed interpretation R-S will look as follows (assuming the definition of the optimum inter-repetition interval as the interval that produces retention of knowledge K=0.95):
->
-> > (4) S=-*s*/ln(K)
-> >
-> > (5) R=e-(*s*-*r*)/S
->
-> The relationship between the stability after the i-th repetition (Si) and the constants C1 and C2 determining the optimum spacing of repetitions as defined by Eqns. (1) and (2) can therefore be written as:
->
-> > (6) Si=-(C1*C2i-1)/ln(K)
->
-> and finally, retrievability in the optimum spacing of repetitions can be expressed as:
->
-> > (7) Ri(t)=exp(t*ln(K)/(C1*C2i-1))
-> >
-> > where:
-> >
-> > - i - number of the repetition in question
-> > - t - time since the i-th repetition
-> > - Ri(t) - retrievability after the time t passing since the i-th repetition in optimum spacing of repetitions
-> > - C1 and C2 - constants from Eqns. (1) and (2)
-> > - K - retention of knowledge equal to 0.95 (it is important to notice that the relationship expressed by Eqn. (7) may not be true for retention higher than 0.95 due to the spacing effect resulting from shorter intervals)
+>    > (7) Ri(t)=exp(t*ln(K)/(C1*C2i-1))
+>>
+>    > where:
+>>
+>    > - i - number of the repetition in question
+>> - t - time since the i-th repetition
+>    > - Ri(t) - retrievability after the time t passing since the i-th repetition in optimum spacing of repetitions
+>> - C1 and C2 - constants from Eqns. (1) and (2)
+>    > - K - retention of knowledge equal to 0.95 (it is important to notice that the relationship expressed by Eqn. (7) may not be true for retention higher than 0.95 due to the spacing effect resulting from shorter intervals)
 
 ## Two components of memory in SuperMemo
 
