--- a/History of spaced repetition/02.1985 Birth of SuperMemo.md
+++ b/History of spaced repetition/02.1985 Birth of SuperMemo.md
@@ -4,25 +4,25 @@
 
 ## The drive for better learning
 
-## 推动更好的学习
+## 为了更好地学习的动力
 
 I spent 22 long years in the education system. Old truths about schooling match my case perfectly. [I never liked school, but I always liked to learn](http://www.azquotes.com/quote/1425085). [I never let school interfere with my learning](http://www.azquotes.com/quote/298644). At entry to university, after 12 years in the public school system, I still loved learning. Schooling did not destroy that love for two main reasons: (1) the system was lenient for me, and, (2) at home, I was [free to learn](https://supermemo.guru/wiki/Free_learning) what I loved. In Communist Poland, I never truly experienced the [toxic whip](https://supermemo.guru/wiki/Toxic_memory) of heavy [schooling](https://supermemo.guru/wiki/Schooling). The system was negligent, and I loved the resulting freedoms.
 
-我在教育系统里呆了22年。学校教育的古老真理与我的观点完全吻合。我从不喜欢上学，但我总是喜欢学习。我从不让学校妨碍我的学习。进入大学时，在公立学校系统工作了12年之后，我仍然热爱学习。学校教育并没有破坏这种爱，主要有两个原因：(1)学校对我很宽容，(2)在家里，我可以自由地学习我喜欢的东西。在共产主义的波兰，我从未真正经历过沉重的学业带来的毒鞭。这个制度疏忽大意，我喜欢由此带来的自由。
+我在教育系统里呆了 22 年。关于学校教育的古老真理与我的观点完全吻合。我从不喜欢上学，但我总是喜欢学习。我从不让学校妨碍我的学习。在公立学校系统待了 12 年之后，进入大学时，我仍然热爱学习。学校教育并没有破坏这种爱，主要有两个原因：(1)学校对我很宽容，(2)在家里，我可以自由地学习我喜欢的东西。在共产主义的波兰，我从未真正经历过沉重的学业带来的毒鞭。这个制度疏忽大意，我喜欢由此带来的自由。
 
 We all know that best learning comes from [passion](https://supermemo.guru/wiki/Childhood_passions). It is powered by the [learn drive](https://supermemo.guru/wiki/Learn_drive). My learn drive was strong and it was mixed with a bit of frustration. The more I learned, the more I could see the power of [forgetting](https://supermemo.guru/wiki/Forgetting). I could not remedy forgetting by more learning. My memory was not bad in comparison with other students, but it was clearly a leaky vessel.
 
-我们都知道最好的学习来自激情。它是由学习驱动的。我的学习动力很强，但也夹杂着一些挫折。我学得越多，就越能看到遗忘的力量。我不能靠更多的学习来弥补遗忘。与其他学生相比，我的记忆力并不差，但很明显，我的记忆力有漏洞。
+我们都知道最好的学习来自激情。它是由学习内驱力驱动的。我的学习内驱力很强，但也夹杂着一些挫折。我学得越多，就越能看到遗忘的力量。我无法通过更多的学习来弥补遗忘 。与其他学生相比，我的记忆力并不差，但很明显，我的记忆力有漏洞。
 
 In 1982, I paid more attention to what most students discover sooner or later: the [testing effect](https://supermemo.guru/wiki/Testing_effect). I started formulating my knowledge for [active recall](https://supermemo.guru/wiki/Active_recall). I would write questions on the left side of a page and answers in a separate column to the right:
 
-1982年，我更加关注大多数学生迟早会发现的东西:考试效果。我开始形成主动回忆的知识。我会把问题写在一页的左边，答案写在右边的一栏里:
+1982 年，我更加关注大多数学生迟早会发现的东西：考试效果。我开始形成主动回忆的知识。我会把问题写在一页的左边，答案写在右边的一栏里：
 
 ![](https://supermemo.guru/images/a/a2/Polish-English_word_pairs_that_helped_formulate_SuperMemo_%28Wozniak_1982%29.jpg)
 
 > **Figure:** In 1982, my learning materials were organized into columns: questions and answers, for active recall. The picture shows my Polish-English word pair database (June 1982)
 >
-> **图：**1982年，我的学习资料被组织成问答栏，用于主动回忆。图为我的波兰英语单词对数据库(1982年6月)
+> **图：**1982 年，我的学习资料被组织成问答栏，用于主动回忆。图为我的波兰英语单词对数据库(1982 年 6 月)
 
 This way, I could cover the answers with a sheet of paper, and employ [active recall](https://supermemo.guru/wiki/Active_recall) to get a better memory effect from review. This was a slow process but the efficiency of learning increased dramatically. My notebooks from the time are described as *"fast assimilation material"*, which referred to the speed of learning and denoted this specific two-column way, in which my knowledge was written down.
 
@@ -30,35 +30,35 @@ This way, I could cover the answers with a sheet of paper, and employ [active re
 
 In the years 1982-1983, I kept expanding my "fast assimilation" knowledge in the areas of biochemistry and English. I would review my pages of information from time to time to reduce forgetting. My retention improved, but it was only a matter of time when I would hit the wall again. The more pages I had, the less frequent the review, the more obvious was the problem of leaking memory. Here is an example of a repetition history from that time:
 
-在1982-1983年期间，我不断扩大我在生物化学和英语领域的“快速吸收”知识。我会不时地回顾我的资料页，以减少遗忘。我的记忆力提高了，但我再次碰壁只是时间问题。我拥有的页面越多，审查的频率越低，内存泄漏的问题就越明显。下面是一个重复历史的例子：
+在 1982 - 1983 年期间，我不断扩大我在生物化学和英语领域的“快速吸收”知识。我会不时地回顾我的资料页，以减少遗忘。我的记忆力提高了，但我再次碰壁只是时间问题。我拥有的页面越多，复习的频率越低，记忆遗漏的问题就越明显。下面是一个重复历史的例子：
 
 [![Intermittent learning started on June 3, 1982](https://supermemo.guru/images/thumb/8/87/Repetition_history_notes_used_in_investigating_recall_%28Wozniak_1982%29.jpg/300px-Repetition_history_notes_used_in_investigating_recall_%28Wozniak_1982%29.jpg)](https://supermemo.guru/wiki/File:Repetition_history_notes_used_in_investigating_recall_(Wozniak_1982).jpg)
 
 > **Figure:** **Repetition history** is the record of review with dates and scores. In this example, 8 repetitions were executed in the years 1982-1985. The page of 38 word-pairs registered 0-7 memory lapses per repetition. This intermittent review was replaced with the SuperMemo method in 1985
 >
-> **图：**复习历史是记录复习的日期和成绩。在这个例子中，1982-1985年进行了8次重复。38对单词的页面记录了每次重复0-7次的记忆缺失。这种断断续续的检查在1985年被SuperMemo方法所取代
+> **图：**复习历史是记录复习的日期和成绩。在这个例子中，1982 - 1985 年进行了 8 次重复。38 对单词的页面记录了每次重复 0 - 7 次的记忆流失。这种断断续续的复习在 1985 年被 SuperMemo 方法所取代
 
 Between June 1982 and December 1984, my English-Polish word-pairs notebook grew to include 79 pages looking like this:
 
-1982年6月到1984年12月之间，我的英语-波兰语单词对笔记本增加到79页，看起来像这样：
+1982 年 6 月到 1984 年 12 月之间，我的英语 - 波兰语单词对笔记本增加到 79 页，看起来像这样：
 
 [![English-Polish word pairs (Wozniak 1982).jpg](https://supermemo.guru/images/thumb/a/a9/English-Polish_word_pairs_%28Wozniak_1982%29.jpg/550px-English-Polish_word_pairs_%28Wozniak_1982%29.jpg)](https://supermemo.guru/wiki/File:English-Polish_word_pairs_(Wozniak_1982).jpg)
 
 > **Figure:** A typical page from my English-Polish words notebook started in June 1982. Word pairs would be listed on the left. Review history would be recorded on the right. Recall errors would be marked as dots in the middle
 >
-> 图：我的英语-波兰语笔记本中的一个典型页面开始于1982年6月。单词对将列在左侧。复习历史记录在右侧。召回错误将被标记为中间的点
+> **图：**我的英语 - 波兰语笔记本中的一个典型页面开始于 1982 年 6 月。单词对将列在左侧。复习历史记录在右侧。回忆错误将被标记为中间的点
 
 Those 79 pages would include a mere 2794 words. This is just a fraction of what I needed, and already quite a headache to review. Interestingly, the pages were built for passive understanding of English (English:Polish). Only in 1984, I started learning English in an active way (Polish:English). This two year delay came from the fact that I was simply late to discover that passive knowledge of vocabulary is sufficient in reading, but it is not enough to speak a language. This kind of ignorance after 6 years of schooling is a norm. Schools do a lot of drilling, but shed very little light on what makes for efficient learning.
 
-这79页只有2794个单词。这只是我所需要的一小部分，而且已经相当令人头疼了。有趣的是，这些页面是为被动理解英语而建立的(英语：波兰语)。直到1984年，我才开始积极学习英语(波兰语：英语)。这两年的延迟来自这样一个事实：我只是迟到了，因为我发现被动的词汇知识在阅读中就足够了，但说一门语言是不够的。这种六年学校教育后的无知是一种常态。学校做了大量的练习，但对什么才能提高学习效率却鲜有说明。
+这 79 页只有 2794 个单词。这只是我所需要的一小部分，而且已经相当令人头疼了。有趣的是，这些页面是为被动理解英语而建立的(英语：波兰语)。直到 1984 年，我才开始积极学习英语(波兰语：英语)。这两年的延迟来自这样一个事实：我只是迟到了，因为我发现被动的词汇知识在阅读中就足够了，但对于说一门语言是不够的。这种六年学校教育后的无知是一种常态。学校做了大量的练习，但对什么才能提高学习效率却鲜有说明。
 
 In late 1984, I decided to improve the review process and carry out an experiment that changed my life. In the end, three decades later, I am super-proud to notice that it actually [affected millions](https://supermemo.guru/wiki/Exponential_adoption_of_spaced_repetition). The experiment has opened the floodgates. We have reached the era of faster and better learning.
 
-1984年底，我决定改进审查过程，并进行一项改变了我生活的实验。最后，三十年后，我非常自豪地注意到它实际上影响了数百万人。实验打开了闸门。我们已经进入了更快更好学习的时代。
+1984 年底，我决定改进复习过程，并进行一项改变了我生活的实验。最后，三十年后，我非常自豪地注意到它实际上影响了数百万人。实验打开了闸门。我们已经进入了更快更好学习的时代。
 
 This is how this initial period was described in my [Master's Thesis](https://supermemo.guru/wiki/Master's_Thesis) in 1990:
 
-我在1990年的硕士论文中是这样描述这个初期的：
+我在 1990 年的硕士论文中是这样描述这个初期的：
 
 Archive warning: [Why use literal archives?](https://supermemo.guru/wiki/Why_use_literal_archives%3F)
 
@@ -70,7 +70,7 @@ This text was part of: "*Optimization of learning*" by [Piotr Wozniak](https://s
 
 It was 1982 when I made my first observations concerning the mechanism of memory that were later used in the formulation of the SuperMemo method. As a then student of molecular biology I was overwhelmed by the amount of knowledge that was required to pass exams in mathematics, physics, chemistry, biology, etc. The problem was not in being unable to master the knowledge. Usually 2-3 days of intensive studying were enough to pack the head with data necessary to pass an exam. The frustrating point was that only an infinitesimal fraction of newly acquired wisdom could remain in memory after few months following the exam.
 
-1982年，我对记忆机制进行了第一次观察，这些观察后来被用于制定Supermemo方法。作为一名当时的分子生物学学生，我被通过数学、物理、化学、生物学等考试所需的大量知识所淹没。问题不在于无法掌握这些知识。通常情况下，2-3天的密集学习足以使头脑中充满通过考试所需的数据。令人沮丧的是，在考试后的几个月后，新获得的智慧中只有极小的一部分可以留在记忆中。
+1982 年，我对记忆机制进行了第一次观察，这些观察后来被用于制定 Supermemo 方法。作为一名当时的分子生物学学生，我被通过数学、物理、化学、生物学等考试所需的大量知识所淹没。问题不在于无法掌握这些知识。通常情况下，2 - 3 天的密集学习足以使头脑中充满通过考试所需的数据。令人沮丧的是，在考试后的几个月后，新获得的智慧中只有极小的一部分可以留在记忆中。
 
 My first observation, obvious for every attentive student, was that one of the key elements of learning was [active recall](https://supermemo.guru/wiki/Active_recall). This observation implies that passive reading of books is not sufficient if it is not followed by an attempt to recall learned facts from memory. The principle of basing the process of learning on recall will be later referred to as the **active recall principle**. The process of recalling is much faster and not less effective if the questions asked by the student are specific rather than general. It is because answers to general questions contain redundant information necessary to describe relations between answer subcomponents.
 
@@ -82,7 +82,7 @@ To illustrate the problem let us imagine an extreme situation in which a student
 
 Having the principles of active recall and minimum information in mind, I created my first databases (i.e. collections of questions and answers) used in an attempt to retain the acquired knowledge in memory. At that time the databases were stored in a written form on paper. My first database was started on June 6, 1982, and was composed of pages that contained about 40 pairs of words each. The first word in a pair (interpreted as a question) was an English term, the second (interpreted as an answer) was its Polish equivalent. I will refer to these pairs as **items**.
 
-考虑到主动回忆和最少信息的原则，我创建了我的第一个数据库(即问题和答案的集合)，试图将获得的知识保留在记忆中。当时，数据库是以书面形式存储在纸上的。我的第一个数据库开始于1982年6月6日，由页面组成，每个页面包含大约40对单词。一对单词中的第一个单词(解释为问题)是英语术语，第二个单词(解释为答案)是波兰语中的等价词。我将这些对称为项目。
+考虑到主动回忆和最少信息的原则，我创建了我的第一个数据库(即问题和答案的集合)，试图将获得的知识保留在记忆中。当时，数据库是以书面形式存储在纸上的。我的第一个数据库开始于 1982 年 6 月 6 日，由页面组成，每个页面包含大约 40 对单词。一对单词中的第一个单词(解释为问题)是英语术语，第二个单词(解释为答案)是波兰语中的等价词。我将这些对称为项目。
 
 I repeated particular pages in the database in irregular intervals (dependent mostly on the availability of time) always recording the date of the repetition, items that were not remembered and their number. This way of keeping the acquired knowledge in memory proved sufficient for a moderate-size database on condition that the repetitions were performed frequently enough.
 
@@ -101,7 +101,7 @@ In 1984, my reasoning about memory was based on two simple intuitions that proba
 - if we review something twice, we remember it better. That's pretty obvious, isn't it? If we review it 3 times, we probably remember it even better
 - if we remember a set of notes, they will gradually disappear from memory, i.e. not all at once. This is easy to observe in life. Memories have different lifetimes
 
-1984年，我关于记忆的推理基于两个可能所有学生都有的简单直觉：
+1984 年，我关于记忆的推理基于两个可能所有学生都有的简单直觉：
 
 - 如果我们复习两次，我们就能更好地记住它。这很明显，不是吗？如果我们把它复习三遍，我们可能会记得更清楚。
 - 如果我们记住一组笔记，它们将逐渐从记忆中消失，即不是一次全部消失。这在生活中很容易观察到。记忆有不同的寿命
@@ -120,23 +120,23 @@ To this day, I am amazed that very few people ever bothered to measure that "[op
 
 The following simple experiment led to the birth of [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition). It was conducted in 1985 and first described in my [Master's Thesis](https://supermemo.guru/wiki/Master's_Thesis) in 1990. It was used to establish optimum intervals for the first 5 repetitions of pages of knowledge. Each page contained around 40 word-pairs and the optimum interval was to approximate the moment in time when roughly 5-10% of that knowledge was forgotten. Naturally, the intervals would only be suited for that particular type of knowledge, and for a specific person (in this case me). In addition, to speed things up, the measurement samples were small. Note that this was not a research project. It was not intended for publication. The goal was to just speed up my own learning. I was convinced someone else must have measured the intervals more accurately, but 13 years before the birth of Google, I thought measuring the intervals would be faster than digging into libraries to find better data. The experiment ended on Aug 24, 1985, which I originally named the birthday of spaced repetition. However, while writing [this text](https://supermemo.guru/wiki/History_of_spaced_repetition) in 2018, I found the original learning materials, and it seems my eagerness to learn made me formulate an outline of the algorithm on Jul 31, 1985. This was the day I started learning human biology using my [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) algorithm.
 
-下面这个简单的实验导致了间隔重复的诞生。它于1985年进行，并于1990年在我的硕士论文中首次描述。它被用来建立前5页重复知识页的最佳间隔。每页包含大约40个单词对，最佳间隔是大约5-10%的知识被遗忘的时刻。当然，这些间隔只适合于特定类型的知识，以及特定的人(在本例中是我)。此外，为了加快速度，测量样本很小。请注意，这不是一个研究项目。它不是为出版而准备的。目的只是为了加快我自己的学习速度。我确信肯定有其他人更精确地测量了间隔，但在Google诞生13年前，我认为测量间隔会比挖掘图书馆寻找更好的数据更快。实验于1985年8月24日结束，我最初将这一天命名为间隔重复的生日。然而，在2018年写这篇课文时，我找到了原始的学习材料，似乎是我对学习的渴望让我在1985年7月31日制定了算法大纲。这是我开始学习人类生物学的一天，使用我的间隔重复算法。
+下面这个简单的实验导致了间隔重复的诞生。它于 1985 年进行，并于 1990 年在我的硕士论文中首次描述。它被用来建立前 5 页重复知识页的最佳间隔。每页包含大约 40 个单词对，最佳间隔是大约 5 - 10% 的知识被遗忘的时刻。当然，这些间隔只适合于特定类型的知识，以及特定的人(在本例中是我)。此外，为了加快速度，测量样本很小。请注意，这不是一个研究项目。它不是为出版而准备的。目的只是为了加快我自己的学习速度。我确信肯定有其他人更精确地测量了间隔，但在 Google 诞生 13 年前，我认为测量间隔会比挖掘图书馆寻找更好的数据更快。实验于 1985 年 8 月 24 日结束，我最初将这一天命名为间隔重复的生日。然而，在 2018 年写这篇课文时，我找到了原始的学习材料，似乎是我对学习的渴望让我在 1985 年 7 月 31 日制定了算法大纲。这是我开始学习人类生物学的一天，使用我的间隔重复算法。
 
 For that reason, I can say that the most accurate birthday of [SuperMemo](https://supermemo.guru/wiki/SuperMemo) and computational [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) was Jul 31, 1985.
 
-基于这个原因，我可以说Supermemo和计算间隔重复最准确的生日是1985年7月31日。
+基于这个原因，我可以说 Supermemo 和计算间隔重复最准确的生日是 1985 年 7 月 31 日。
 
 By July 31, before the end of the experiment, the results seemed predictable enough. In later years, the findings of this particular experiment appeared pretty universal and could be extended to more areas of knowledge and to the whole healthy adult population. Even in 2018, the default settings of [Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17) do not depart far from those early rudimentary findings.
 
-到7月31日，在实验结束之前，结果似乎是可以预测的。在后来的几年中，这个特殊实验的发现似乎相当普遍，并且可以扩展到更多的知识领域和整个健康的成年人口。即使在2018年，算法SM-17的默认设置也与那些早期的初步发现相差不远。
+到 7 月 31 日，在实验结束之前，结果似乎是可以预测的。在后来的几年中，这个特殊实验的发现似乎相当普遍，并且可以扩展到更多的知识领域和整个健康的成年人口。即使在 2018 年，算法 SM-17 的默认设置也与那些早期的初步发现相差不远。
 
 [Spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) was born on Jul 31, 1985
 
-间隔重复出生于1985年7月31日
+间隔重复出生于 1985 年 7 月 31 日
 
 Here is the original description of the experiment from my [Master's Thesis](https://supermemo.guru/wiki/Master's_Thesis) with minor corrections to grammar and style. Emphasis in the text was added in 2018 to highlight important parts. If the text seems boring and unreadable, compare [Ebbinghaus 1885](http://psychclassics.yorku.ca/Ebbinghaus/index.htm). This is the same style of writing in the area of memory. Only goals differed. Ebbinghaus tried to understand memory. 100 years later, I just wanted to learn faster:
 
-这是我硕士论文中对实验的原始描述，对语法和风格做了一些小的修改。2018年增加了文本中的重点，以突出重要部分。如果文本看起来枯燥难懂，请比较一下艾宾豪斯1885年。这是在记忆区域中相同的书写风格。只有目标不同。艾宾豪斯试图理解记忆。100年后，我只想学得更快：
+这是我硕士论文中对实验的原始描述，对语法和风格做了一些小的修改。2018 年增加了文本中的重点，以突出重要部分。如果文本看起来枯燥难懂，请比较一下艾宾豪斯 1885 年。这是在记忆区域中相同的书写风格。只有目标不同。艾宾豪斯试图理解记忆。100 年后，我只想学得更快：
 
 Archive warning: [Why use literal archives?](https://supermemo.guru/wiki/Why_use_literal_archives%3F)
 
@@ -144,7 +144,7 @@ Archive warning: [Why use literal archives?](https://supermemo.guru/wiki/Why_use
 
 This text was part of: "*Optimization of learning*" by [Piotr Wozniak](https://supermemo.guru/wiki/Piotr_Wozniak) (1990)
 
-本文是Piotr Wozniak的“学习的优化”(1990)的一部分
+本文是 Piotr Wozniak 的“学习的优化”(1990)的一部分
 
 **Experiment intended to approximate the length of optimum inter-repetition intervals** (Feb 25, 1985 - Aug 24, 1985):
 
@@ -157,14 +157,14 @@ This text was part of: "*Optimization of learning*" by [Piotr Wozniak](https://s
 
 
 
-旨在近似最佳重复间隔长度的实验(1985年2月25日-1985年8月24日)：
+旨在近似最佳重复间隔长度的实验(1985 年 2 月 25 日 - 1985 年 8 月 24 日)：
 
-1. 实验分为A、B、C、…四个阶段。这些阶段中的每个阶段旨在计算第二、第三、第四和进一步的准最优重复间隔(第一间隔被设置为一天，因为从早先收集的数据判断，它似乎是最合适的间隔)。建立准最佳间隔的标准是，它们应该尽可能长，并允许记忆知识的损失不超过5%。
-2. 每一阶段A、B、C中记忆的知识由5页组成，约40个项目，形式如下：
+1. 实验分为 A、B、C、… 等阶段。这些阶段中的每个阶段旨在计算第二、第三、第四和进一步的准最优重复间隔(第一间隔被设置为一天，因为从早先收集的数据判断，它似乎是最合适的间隔)。建立准最佳间隔的标准是，它们应该尽可能长，并允许记忆知识的损失不超过 5%。
+2. 每一阶段 A、B、C 中记忆的知识由5页组成，约40个项目，形式如下：
 3. 在给定阶段中使用的每一页在单个会话中被记忆，并在第二天重复。为了避免混淆，请注意，为了简化进一步的考虑，我使用术语“第一次重复”来表示对一个项目或一组项目的记忆。毕竟，记忆和再学习这两个过程都有相同的形式：回答问题，直到错误数量达到零为止。
-4. 在阶段A(2月25日-3月16日)，对五页中的每一页分别间隔2，4，6，8和10天进行第三次重复。这些重复后观察到的知识损失分别为0，0，0，1，17%。选择七天间隔来近似分隔第二和第三重复的第二准最佳重复间隔。
-5. 在阶段B(3月20日-4月13日)中，第三次重复是在七天间隔之后进行的，而第四次重复分别在6，8，11，13，16天内对五页中的每一页进行。观察到的知识损失总计为3，0，0，0，1%。选择16天间隔来近似第三准最佳间隔。注：从科学上讲，用第三个间隔的更长变体重复阶段B会更有效，因为即使在所选间隔中最长的间隔之后，知识损失也很少；然而，那时我太渴望看到进一步步骤的结果，花时间重复看起来足够成功的阶段B(即，导致良好的保留)。
-6. 在C阶段(4月20日-6月21日)，在间隔7天之后进行第三次重复，在间隔16天之后进行第四次重复，在间隔20天、24天、28天、33天和38天之后进行第五次重复。观察到的知识损失为0，3，5，3，0%。阶段C在第五次重复(5月31日-8月24日)之前重复了更长的时间间隔。间期和记忆损失分别为：32-8%，35-8%，39-17%，44-20%，51%-51%和60-20%。选择35天的间隔来近似第四准最佳间隔。
+4. 在阶段 A(2 月 25 日 - 3 月 16 日)，对五页中的每一页分别间隔 2，4，6，8 和 10 天进行第三次重复。这些重复后观察到的知识损失分别为 0，0，0，1，17%。选择七天间隔来近似分隔第二和第三重复的第二准最佳重复间隔。
+5. 在阶段B(3 月 20 日 - 4 月 13 日)中，第三次重复是在七天间隔之后进行的，而第四次重复分别在 6，8，11，13，16 天内对五页中的每一页进行。观察到的知识损失总计为 3，0，0，0，1%。选择 16 天间隔来近似第三准最佳间隔。注：从科学上讲，用第三个间隔的更长变体重复阶段 B 会更有效，因为即使在所选间隔中最长的间隔之后，知识损失也很少；然而，那时我太渴望看到进一步步骤的结果，花时间重复看起来足够成功的阶段 B(即，导致良好的保留)。
+6. 在C阶段(4 月 20 日 - 6 月 21 日)，在间隔7天之后进行第三次重复，在间隔 16 天之后进行第四次重复，在间隔 20 天、24 天、28 天、33 天和 38 天之后进行第五次重复。观察到的知识损失为 0，3，5，3，0%。阶段 C 在第五次重复(5 月 31 日 - 8 月 24 日)之前重复了更长的时间间隔。间期和记忆损失分别为：32-8%，35-8%，39-17%，44-20%，51%-51% 和 60-20%。选择 35 天的间隔来近似第四准最佳间隔。
 
 It is not difficult to notice, that each of the stages of the described experiment took about twice as much time as the previous one. It could take several years to establish the first ten quasi-optimal inter-repetition intervals. Indeed, I continued experiments of this sort in following years in order to gain deeper understanding of the process of optimally spaced repetitions of memorized knowledge. However, at that time, I decided to employ the findings in my day-to-day process of routine learning.
 
@@ -172,7 +172,7 @@ It is not difficult to notice, that each of the stages of the described experime
 
 On July 31, 1985, I could already sense the outcome of the experiment. I started using [SuperMemo on paper](https://supermemo.guru/wiki/SuperMemo_on_paper) to learn human biology. That day marks the best date to nominate for the birthday of [SuperMemo](https://supermemo.guru/wiki/SuperMemo) and the birthday of [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition).
 
-1985年7月31日，我已经能感觉到实验的结果了。我开始用纸上的Supermemo来学习人类生物学。这一天标志着为Supermemo的生日和间隔重复的生日提名的最佳日期。
+1985 年 7 月 31 日，我已经能感觉到实验的结果了。我开始用纸上的 Supermemo 来学习人类生物学。这一天标志着为 Supermemo 的生日和间隔重复的生日提名的最佳日期。
 
 ## The events of July 31, 1985
 
@@ -180,7 +180,7 @@ On July 31, 1985, I could already sense the outcome of the experiment. I started
 
 On July 31, 1985, [SuperMemo](https://supermemo.guru/wiki/SuperMemo) was born. I had most of my data from my [spaced repetition experiment](https://supermemo.guru/wiki/History_of_spaced_repetition_(print)#Experiment) available. As an eager practitioner, I did not wait for the experiment to end. I wanted to start learning as soon as possible. Having built a great deal of notes in human biology, I started converting those notes into *Special Memorization Test* format (SMT was the original name for [SuperMemo](https://supermemo.guru/wiki/SuperMemo), and [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition)).
 
-1985年7月31日，Supermemo诞生了。我有我的大部分数据从我的间隔重复实验可用。作为一个热心的修行者，我没有等到实验结束。我想尽快开始学习。在人类生物学中建立了大量的笔记之后，我开始将这些笔记转换为特殊记忆测试格式(SMT是Supermemo的原始名称，并且间隔重复)。
+1985 年 7 月 31 日，Supermemo 诞生了。我有我的大部分数据从我的间隔重复实验可用。作为一个热心的修行者，我没有等到实验结束。我想尽快开始学习。在人类生物学中建立了大量的笔记之后，我开始将这些笔记转换为特殊记忆测试格式(SMT 是 Supermemo 的原始名称，并且间隔重复)。
 
 [![Human biology in the Special Memorization Test format started on Jul 31, 1985 (i.e. the birth of SuperMemo)](https://supermemo.guru/images/thumb/3/39/SuperMemo_Memorization_Test_Human_biology_1985.07.31.jpg/800px-SuperMemo_Memorization_Test_Human_biology_1985.07.31.jpg)](https://supermemo.guru/wiki/File:SuperMemo_Memorization_Test_Human_biology_1985.07.31.jpg)
 
@@ -190,35 +190,35 @@ On July 31, 1985, [SuperMemo](https://supermemo.guru/wiki/SuperMemo) was born. I
 
 My calculations told me that, at 20 min/day, I would need 537 days to process my notes and finish the job by January 1987. I also computed that each page of the test would likely cost me 2 hours of life. Despite all the promise and speed of SuperMemo, this realization was pretty painful. The speed of learning in college is way too fast for the capacity of human memory. Now that I could learn much faster and better, I also realized I wouldn't cover even a fraction of what I thought was possible. [Schools make no sense](https://supermemo.guru/wiki/Futility_of_schooling) with their volume and speed. On the same day, I found out that the Polish communist government lifted import tariffs on microcomputers. This should make it possible, at some point, to buy a computer in Poland. This opened a way to [SuperMemo for DOS](https://supermemo.guru/wiki/SuperMemo_for_DOS) that was developed 2.5 years later.
 
-我的计算告诉我，以每天20分钟计算，我需要537天来处理我的笔记，并在1987年1月之前完成这项工作。我还计算出测试的每一页可能会花费我2个小时的生命。尽管Supermemo的所有承诺和速度都很快，但这种认识还是相当痛苦的。大学里的学习速度对于人类的记忆能力来说太快了。现在我可以学得更快更好，我也意识到我甚至不会涵盖我认为可能的一小部分。学校的数量和速度毫无意义。同一天，我发现波兰共产党政府取消了微型计算机的进口关税。这将使在某种程度上在波兰购买一台计算机成为可能。这为2.5年后开发的DOS打开了一条通往Supermemo的道路。
+我的计算告诉我，以每天 20 分钟计算，我需要 537 天来处理我的笔记，并在 1987 年 1 月之前完成这项工作。我还计算出测试的每一页可能会花费我 2 个小时的生命。尽管 Supermemo 的所有承诺和速度都很快，但这种认识还是相当痛苦的。大学里的学习速度对于人类的记忆能力来说太快了。现在我可以学得更快更好，我也意识到我甚至不会涵盖我认为可能的一小部分。学校的数量和速度毫无意义。同一天，我发现波兰共产党政府取消了微型计算机的进口关税。这将使在某种程度上在波兰购买一台计算机成为可能。这为 2.5 年后开发的 DOS 打开了一条通往 Supermemo 的道路。
 
 Also on July 31, I noted that if vacation could last forever, I would achieve far more in learning, and even more in life. School is such a [waste of time](https://supermemo.guru/wiki/Problem_of_Schooling). However, the threat of conscription kept me in line. I would enter a path that would make me enroll in university for another 5 years. However, most of that time was devoted to [SuperMemo](https://supermemo.guru/wiki/SuperMemo), and I have few regrets.
 
-同样在7月31日，我注意到，如果假期可以永远持续下去，我将在学习上取得更大的成就，甚至在生活中取得更大的成就。上学真是浪费时间。然而，征兵的威胁让我坚持了下来。我会走上一条让我再上5年大学的道路。然而，大部分时间都花在了Supermemo上，我没有什么遗憾。
+同样在 7 月 31 日，我注意到，如果假期可以永远持续下去，我将在学习上取得更大的成就，甚至在生活中取得更大的成就。上学真是浪费时间。然而，征兵的威胁让我坚持了下来。我会走上一条让我再上 5 年大学的道路。然而，大部分时间都花在了 Supermemo上，我没有什么遗憾。
 
 My [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) experiment ended on Aug 24, 1985. I also started learning English vocabulary. By that day, I managed to have most of my biochemistry material written down in pages for SuperMemo review.
 
-我的间隔重复实验于1985年8月24日结束。我也开始学习英语词汇。到那一天，我设法把我的大部分生化材料写成页，供Supermemo审阅。
+我的间隔重复实验于 1985 年 8 月 24 日结束。我也开始学习英语词汇。到那一天，我设法把我的大部分生化材料写成页，供 Supermemo 审阅。
 
 Note: My [Master's Thesis](https://supermemo.guru/wiki/Master's_Thesis) mistakenly refers to Oct 1, 1985 as the day when I started learning human biology (not July 31 as seen in the picture above). Oct 1, 1985 was actually the first day of my computer science university and was otherwise unremarkable. With the start of the university, my time for learning and energy for learning were cut dramatically. Paradoxically, the start of school always seems to augur [the end of good learning](https://supermemo.guru/wiki/Problem_of_schooling).
 
-注：我的硕士论文错误地将1985年10月1日作为我开始学习人类生物学的日子(而不是上图中看到的7月31日)。1985年10月1日实际上是我计算机科学大学的第一天，在其他方面并不引人注目。随着大学的开始，我的学习时间和学习的精力被戏剧性地削减了。矛盾的是，开学似乎总是预示着良好学习的结束。
+注：我的硕士论文错误地将 1985 年 10 月 1 日作为我开始学习人类生物学的日子(而不是上图中看到的 7 月 31 日)。1985 年 10 月 1 日实际上是我计算机科学大学的第一天，在其他方面并不引人注目。随着大学的开始，我的学习时间和学习的精力被戏剧性地削减了。矛盾的是，开学似乎总是预示着良好学习的结束。
 
 ## First spaced repetition algorithm: Algorithm SM-0, Aug 25, 1985
 
-## 第一个间隔重复算法：算法SM-0，1985年8月25日
+## 第一个间隔重复算法：算法 SM-0，1985 年 8 月 25 日
 
 As a result of my [spaced repetition experiment](https://supermemo.guru/wiki/History_of_spaced_repetition_(print)#Experiment), I was able to formulate the first [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) algorithm that required no computer. All learning had to be done on paper. I did not have a computer back in 1985. I was to get my first microcomputer, ZX Spectrum, only in 1986. [SuperMemo](https://supermemo.guru/wiki/SuperMemo) had to wait even longer. I got my first computer with a floppy disk drive, Amstrad PC 1512, in the year 1987.
 
-作为我间隔重复实验的结果，我能够制定出不需要计算机的第一个间隔重复算法。所有的学习都必须在纸上完成。我在1985年没有电脑。我是在1986年才得到我的第一台微型计算机，ZX Spectrum。Supermemo不得不等待更长的时间。1987年，我得到了我的第一台带有软盘驱动器的计算机，Amstrad PC 1512。
+作为我间隔重复实验的结果，我能够制定出不需要计算机的第一个间隔重复算法。所有的学习都必须在纸上完成。我在 1985 年没有电脑。我是在 1986 年才得到我的第一台微型计算机，ZX Spectrum。Supermemo 不得不等待更长的时间。1987 年，我得到了我的第一台带有软盘驱动器的计算机，Amstrad PC 1512。
 
 I often get asked this simple question: *"How can you formulate SuperMemo after an experiment that lasted 6 months? How can you predict what would happen in 20 years?"*
 
-我经常被问到这个简单的问题：“在一个持续了6个月的实验之后，你如何制定Supermemo？你如何预测20年后会发生什么？”
+我经常被问到这个简单的问题：“在一个持续了 6 个月的实验之后，你如何制定 Supermemo？你如何预测 20 年后会发生什么？”
 
 The first experiments in reference to the length of optimum interval resulted in conclusions that made it possible to predict the most likely length of successive inter-repetition intervals without actually measuring [retention](https://supermemo.guru/wiki/Retention) beyond weeks! In short, it could be illustrated with the following reasoning. If the first months of research yielded the following optimum intervals: 1, 2, 4, 8, 16 and 32 days, you could hope with some confidence that the successive [intervals](https://supermemo.guru/wiki/Interval) would increase by a factor of two.
 
-关于最佳间隔长度的第一个实验得出的结论使预测连续重复间隔的最可能长度成为可能，而无需实际测量超过几周的保持度！简而言之，可以用下面的推理来说明这一点。如果研究的头几个月产生了以下最佳间隔：1，2，4，8，16和32天，你可以有信心地希望连续的间隔会增加到2倍。
+关于最佳间隔长度的第一个实验得出的结论使预测连续重复间隔的最可能长度成为可能，而无需实际测量超过几周的保持度！简而言之，可以用下面的推理来说明这一点。如果研究的头几个月产生了以下最佳间隔：1，2，4，8，16 和 32 天，你可以有信心地希望连续的间隔会增加到2倍。
 
 Archive warning: [Why use literal archives?](https://supermemo.guru/wiki/Why_use_literal_archives%3F)
 
@@ -226,7 +226,7 @@ Archive warning: [Why use literal archives?](https://supermemo.guru/wiki/Why_use
 
 This text was part of: "*Optimization of learning*" by [Piotr Wozniak](https://supermemo.guru/wiki/Piotr_Wozniak) (1990)
 
-本文是Piotr Wozniak的“学习的优化”(1990)的一部分
+本文是 Piotr Wozniak 的“学习的优化”(1990)的一部分
 
 **Algorithm SM-0 used in spaced repetition without a computer (Aug 25, 1985)**
 
@@ -235,28 +235,28 @@ This text was part of: "*Optimization of learning*" by [Piotr Wozniak](https://s
 3. Repeat whole pages using the following intervals (in days):
 4. Copy all items forgotten after the 35th day interval into newly created pages (without removing them from previously used pages). Those new pages will be repeated in the same way as pages with items learned for the first time
 
-  算法SM-0在没有计算机的间隔重复中使用(1985年8月25日)。
+  算法 SM-0 在没有计算机的间隔重复中使用(1985 年 8 月 25 日)。
 
 1. 将知识分成尽可能小的问答项目。
-2. 将项目关联到包含20-40个元素的组中。这些组后来称为页面。
+2. 将项目关联到包含 20-40 个元素的组中。这些组后来称为页面。
 3. 使用以下间隔(天)重复整个页面：
-4. 将35天间隔后忘记的所有项目复制到新创建的页面中(不从以前使用的页面中删除)。这些新页面将以与首次学习项目的页面相同的方式重复  
+4. 将 35 天间隔后忘记的所有项目复制到新创建的页面中(不从以前使用的页面中删除)。这些新页面将以与首次学习项目的页面相同的方式重复  
 
 Note, that inter-repetition intervals after the fifth repetition were assumed to increase twice in subsequent repetitions. This fact was based on an intuition rather than on experiment. In two years of using the Algorithm SM-0 sufficient data were collected to confirm a reasonable accuracy of this assumption.
 
-注意，假设第五次重复后的间隔在随后的重复中增加两次。这个事实是基于直觉而不是实验。在使用SM-0算法的两年中，收集了足够的数据来确认这一假设的合理准确性。
+注意，假设第五次重复后的间隔在随后的重复中增加两次。这个事实是基于直觉而不是实验。在使用 SM-0 算法的两年中，收集了足够的数据来确认这一假设的合理准确性。
 
 To this day I hear some people use or even prefer the paper version of SuperMemo. [Here](http://super-memory.com/articles/paper.htm) is a description from 1992.
 
-直到今天，我听说有些人使用甚至更喜欢纸质版的Supermemo。以下是1992年的描述。
+直到今天，我听说有些人使用甚至更喜欢纸质版的 Supermemo。以下是 1992 年的描述。
 
 Note that the intuition that intervals should increase twice is as old as the theory of learning. In 1932, [C. A. Mace](http://en.wikipedia.org/wiki/Cecil_Alec_Mace) hinted on the efficient learning methods in his book "*The psychology of study*". He mentioned "*active rehearsal*" and "*repetitive revisions*" that should be spaced in gradually increasing intervals, roughly "*intervals of one day, two days, four days, eight days, and so on*". This proposition was later taken on by other authors. Those included Paul Pimsleur and Tony Buzan who both proposed their own intuitions that involved very short intervals (in minutes) or "final repetition" (after a few months). All those ideas did not permeate well into the practice of study. Only a computer application made it possible to start learning effectively without studying the methodology.
 
-请注意，间隔应该增加两倍的直觉与学习理论一样古老。1932年，C.A.Mace在他的“学习心理学”一书中暗示了有效的学习方法。他提到“积极的排练”和“重复的修改”，应该以逐渐增加的间隔，大约“一天、两天、四天、八天等的间隔”。这一命题后来被其他作者采纳。其中包括Paul Pimsleur和Tony Buzan，他们都提出了自己的直觉，涉及非常短的间隔(以分钟为单位)或“最终重复”(几个月后)。所有这些想法都没有很好地渗透到学习实践中。只有计算机应用程序才能在不研究方法论的情况下有效地开始学习。
+请注意，间隔应该增加两倍的直觉与学习理论一样古老。1932 年，C.A.Mace在他的“学习心理学”一书中暗示了有效的学习方法。他提到“积极的排练”和“重复的修改”，应该以逐渐增加的间隔，大约“一天、两天、四天、八天等的间隔”。这一命题后来被其他作者采纳。其中包括 Paul Pimsleur 和 Tony Buzan，他们都提出了自己的直觉，涉及非常短的间隔(以分钟为单位)或“最终重复”(几个月后)。所有这些想法都没有很好地渗透到学习实践中。只有计算机应用程序才能在不研究方法论的情况下有效地开始学习。
 
 That intuitive [interval](https://supermemo.guru/wiki/Interval) multiplication factor of 2 has also shown up in the context of studying the possibility of evolutionary optimization of memory in response to statistic properties of the environment: "[**Memory is optimized to meet probabilistic properties of the environment**](http://super-memory.com/articles/stability.htm)"
 
-直观的区间倍增因子2也显示在研究响应于环境的统计属性的存储器的进化优化的可能性的上下文中：“存储器被优化以满足环境的概率属性”
+直观的区间倍增因子 2 也显示在研究响应于环境的统计属性的存储器的进化优化的可能性的上下文中：“存储器被优化以满足环境的概率属性”
 
 Despite all its simplicity, in my [Master's Thesis](https://supermemo.guru/wiki/Master's_Thesis), I did not hesitate to call my new method "revolutionary":
 
@@ -268,14 +268,14 @@ Archive warning: [Why use literal archives?](https://supermemo.guru/wiki/Why_use
 
 This text was part of: "*Optimization of learning*" by [Piotr Wozniak](https://supermemo.guru/wiki/Piotr_Wozniak) (1990)
 
-本文是Piotr Wozniak的“学习的优化”(1990)的一部分
+本文是 Piotr Wozniak 的“学习的优化”(1990)的一部分
 
 Although the acquisition rate may not have seemed staggering, the Algorithm SM-0 was revolutionary in comparison to my previous methods because of two reasons:
 
 - with the lapse of time, knowledge retention increased instead of decreasing (as it was the case with intermittent learning)
 - in a long term perspective, the acquisition rate remained almost unchanged (with intermittent learning, the acquisition rate would decline substantially over time)
 
-虽然捕获速率可能看起来并不惊人，但与我以前的方法相比，算法SM-0是革命性的，原因有两个：
+虽然捕获速率可能看起来并不惊人，但与我以前的方法相比，算法 SM-0 是革命性的，原因有两个：
 
 - 随着时间的推移，知识保留增加而不是减少(就像间歇性学习的情况一样)。
 - 长期来看，习得率几乎保持不变(在间歇性学习的情况下，习得率将随着时间的推移而大幅下降)  
@@ -288,13 +288,13 @@ For the first time, I was able to reconcile high knowledge retention with infreq
 
 Retention of 80% was easily achieved, and could even be increased by shortening the inter-repetition intervals. This, however, would involve more frequent repetitions and, consequently, increase the timeload. The assumed repetition spacing provided a satisfactory compromise between retention and workload.
 
-80%的保留率很容易实现，甚至可以通过缩短重复间隔来增加。然而，这将涉及更频繁的重复，因此，增加了时间负载。假设的重复间隔在保留和工作量之间提供了令人满意的折衷。
+80% 的保留率很容易实现，甚至可以通过缩短重复间隔来增加。然而，这将涉及更频繁的重复，因此，增加了时间负载。假设的重复间隔在保留和工作量之间提供了令人满意的折衷。
 
 [...]
 
 The next significant improvement of the Algorithm SM-0 was to come only in 1987 after the application of a computer to supervise the learning process. In the meantime, I accumulated about 7190 and 2817 items in my new English and biological databases respectively. With the estimated working time of 12 minutes a day for each database, the average knowledge acquisition rate amounted to 260 and 110 items/year/minute respectively, while knowledge retention amounted to 80% at worst.
 
-算法SM-0的下一个重大改进是在1987年应用计算机监控学习过程之后才出现的。同时，我在新的英语和生物数据库中分别积累了大约7190条和2817条。在每个数据库每天估计工作时间为12分钟的情况下，平均知识获取速率分别为260和110项/年/分钟，而知识保留率最差可达80%。
+算法 SM-0 的下一个重大改进是在 1987 年应用计算机监控学习过程之后才出现的。同时，我在新的英语和生物数据库中分别积累了大约 7190 条和 2817 条。在每个数据库每天估计工作时间为 12 分钟的情况下，平均知识获取速率分别为 260 和 110 项/年/分钟，而知识保留率最差可达 80%。
 
 ## Birth of SuperMemo from a decade's perspective
 
@@ -304,6 +304,6 @@ A decade after the birth of [SuperMemo](https://supermemo.guru/wiki/SuperMemo), 
 
 > It was 1982, when a 20-year-old student of molecular biology at Adam Mickiewicz University of Poznan, Piotr Wozniak, became quite frustrated with his inability to retain newly learned knowledge in his brain. This referred to the vast material of biochemistry, physiology, chemistry, and English, which one should master wishing to embark on a successful career in molecular biology. One of the major incentives to tackle the problem of forgetting in a more systematic way was a simple calculation made by Wozniak which showed him that by continuing his work on mastering English using his standard methods, he would need 120 years to acquire all the important vocabulary. This not only prompted Wozniak to work on methods of learning, but also, turned him into a determined advocate of the idea of one language for all people (bearing in mind the time and money spent by the mankind on translation and learning languages). Initially, Wozniak kept increasing piles of notes with facts and figures he would like to remember. It did not take long to discover that forgetting requires frequent repetitions and a systematic approach is needed to manage all the newly collected and memorized knowledge. Using an obvious intuition, Wozniak attempted to [measure the retention of knowledge after different inter-repetition intervals](https://supermemo.guru/wiki/History_of_spaced_repetition_(print)#Experiment), and in 1985 formulated the [first outline of SuperMemo](https://supermemo.guru/wiki/History_of_spaced_repetition_(print)#First_spaced_repetition_algorithm:_Algorithm_SM-0.2C_Aug_25.2C_1985), which did not yet require a computer. By 1987, Wozniak, then a sophomore of computer science, was quite amazed with the effectiveness of his method and decided to implement it as a [simple computer program](https://supermemo.guru/wiki/SuperMemo_1.0_for_DOS_(1987)). The effectiveness of the program appeared to go far beyond what he had expected. This triggered an exciting scientific exchange between Wozniak and his colleagues at Poznan University of Technology and Adam Mickiewicz University. A dozen of students at his department took on the role of guinea pigs and memorized thousands of items providing a constant flow of data and critical feedback. Dr Gorzelańczyk from Medical Academy was helpful in formulating the [molecular model of memory formation](http://www.super-memory.com/english/ol/mem1998.htm) and modeling the phenomena occurring in the synapse. Dr Makalowski from the Department of Biopolymer Biochemistry contributed to the analysis of evolutionary aspects of optimization of memory (NB: he was also the one who suggested registering SuperMemo for Software for Europe). Janusz Murakowski, MSc in physics, currently enrolled in a doctoral program at the University of Delaware, helped Wozniak solve mathematical problems related to the [model of intermittent learning](https://supermemo.guru/wiki/Search_for_a_universal_memory_formula) and simulation of ionic currents during the transmission of action potential in nerve cells. A dozen of forthcoming academic teachers, with Prof. Zbigniew Kierzkowski in forefront, helped Wozniak tailor his program of study to one goal: combining all aspects of SuperMemo in one cohesive theory that would encompass molecular, evolutionary, behavioral, psychological, and even societal aspects of SuperMemo. Wozniak who claims to have discovered at least several important and never-published [properties of memory](https://supermemo.guru/wiki/Two_component_model_of_memory), intended to solidify his theories by getting a PhD in neuroscience in the US. Many hours of discussions with [Krzysztof Biedalak](https://supermemo.guru/wiki/Krzysztof_Biedalak), MSc in computer science, made them both choose another way: try to fulfill the vision of getting with SuperMemo to students around the world
 
-在Supermemo诞生十年后，它在波兰变得相当有名。以下是J·科瓦尔斯基在1994年重述的故事：
+在 Supermemo 诞生十年后，它在波兰变得相当有名。以下是J·科瓦尔斯基在 1994 年重述的故事：
 
-> 1982年，波兹南亚当·米奇维茨大学(Adam Mickiewicz University Of Poznan)20岁的分子生物学学生皮奥特·沃兹尼亚克(Piotr Wozniak)对自己无法在大脑中保留新学到的知识感到相当沮丧。这指的是生物化学、生理学、化学和英语的大量材料，要想在分子生物学中取得成功，就应该掌握这些材料。以更系统的方式解决遗忘问题的主要动机之一是沃兹尼亚克所做的一个简单的计算，这表明通过继续使用他的标准方法掌握英语，他需要120年才能掌握所有重要的词汇。这不仅促使沃兹尼亚克致力于学习方法，而且使他成为一种语言为所有人的思想的坚定倡导者(记住人类在翻译和学习语言上花费的时间和金钱)。最初，沃兹尼亚克不断增加他想要记住的事实和数字的笔记。没过多久就发现遗忘需要频繁的重复，需要一种系统的方法来管理所有新收集和记忆的知识。沃兹尼亚克凭借明显的直觉，试图测量在不同的重复间隔后知识的保留情况，并在1985年制定了第一个Supermemo大纲，这还不需要计算机。到1987年，沃兹尼亚克，当时是计算机科学的大二学生，对他的方法的有效性感到非常惊讶，并决定将其作为一个简单的计算机程序来实现。这个计划的有效性似乎远远超出了他的预期。这引发了沃兹尼亚克和他在波兹南科技大学和亚当·米基维奇大学的同事之间令人兴奋的科学交流。他所在系的十几名学生扮演了小白鼠的角色，记忆了数千个项目，提供了持续不断的数据流和批判性反馈。医学学院的Gorzelańczyk博士有助于形成记忆形成的分子模型，并对突触中发生的现象进行建模。生物聚合物生物化学系的Makalowski博士对优化记忆的进化方面的分析做出了贡献(NB：他也是建议注册Supermemo for Software for Europe的人)。Janusz Murakowski，物理学硕士，目前在特拉华大学攻读博士课程，帮助Wozniak解决与神经细胞中动作电位传输期间间歇学习模型和离子电流模拟相关的数学问题。以Zbigniew Kierzkowski教授为代表的十几位即将上任的学术教师帮助沃兹尼亚克将他的研究计划定制为一个目标：将Supermemo的所有方面结合在一个凝聚力的理论中，该理论将涵盖Supermemo的分子、进化、行为、心理甚至社会方面。沃兹尼亚克声称已经发现了至少几个重要的从未发表过的记忆属性，他打算通过在美国获得神经科学博士学位来巩固他的理论。与计算机科学硕士Krzysztof Biedalak进行了长达数小时的讨论，使他们都选择了另一种方式：尝试实现向世界各地的学生提供Supermemo的愿景
+> 1982 年，波兹南亚当·米奇维茨大学(Adam Mickiewicz University Of Poznan)20 岁的分子生物学学生皮奥特·沃兹尼亚克(Piotr Wozniak)对自己无法在大脑中保留新学到的知识感到相当沮丧。这指的是生物化学、生理学、化学和英语的大量材料，要想在分子生物学中取得成功，就应该掌握这些材料。以更系统的方式解决遗忘问题的主要动机之一是沃兹尼亚克所做的一个简单的计算，这表明通过继续使用他的标准方法掌握英语，他需要 120 年才能掌握所有重要的词汇。这不仅促使沃兹尼亚克致力于学习方法，而且使他成为一种语言为所有人的思想的坚定倡导者(记住人类在翻译和学习语言上花费的时间和金钱)。最初，沃兹尼亚克不断增加他想要记住的事实和数字的笔记。没过多久就发现遗忘需要频繁的重复，需要一种系统的方法来管理所有新收集和记忆的知识。沃兹尼亚克凭借明显的直觉，试图测量在不同的重复间隔后知识的保留情况，并在1985年制定了第一个 Supermemo 大纲，这还不需要计算机。到 1987 年，沃兹尼亚克，当时是计算机科学的大二学生，对他的方法的有效性感到非常惊讶，并决定将其作为一个简单的计算机程序来实现。这个计划的有效性似乎远远超出了他的预期。这引发了沃兹尼亚克和他在波兹南科技大学和亚当·米基维奇大学的同事之间令人兴奋的科学交流。他所在系的十几名学生扮演了小白鼠的角色，记忆了数千个项目，提供了持续不断的数据流和批判性反馈。医学学院的 Gorzelańczyk 博士有助于形成记忆形成的分子模型，并对突触中发生的现象进行建模。生物聚合物生物化学系的 Makalowski 博士对优化记忆的进化方面的分析做出了贡献(NB：他也是建议注册 Supermemo for Software for Europe 的人)。Janusz Murakowski，物理学硕士，目前在特拉华大学攻读博士课程，帮助 Wozniak 解决与神经细胞中动作电位传输期间间歇学习模型和离子电流模拟相关的数学问题。以 Zbigniew Kierzkowski 教授为代表的十几位即将上任的学术教师帮助沃兹尼亚克将他的研究计划定制为一个目标：将 Supermemo 的所有方面结合在一个凝聚力的理论中，该理论将涵盖 Supermemo 的分子、进化、行为、心理甚至社会方面。沃兹尼亚克声称已经发现了至少几个重要的从未发表过的记忆属性，他打算通过在美国获得神经科学博士学位来巩固他的理论。与计算机科学硕士 Krzysztof Biedalak 进行了长达数小时的讨论，使他们都选择了另一种方式：尝试实现向世界各地的学生提供 Supermemo 的愿景
