修改小错误

--- a/History of spaced repetition/03.1986 First steps of SuperMemo.md
+++ b/History of spaced repetition/03.1986 First steps of SuperMemo.md
@@ -156,7 +156,7 @@ According to the simulation, the number of items memorized in consecutive years 
 > - aar - asymptotic acquisition rate, i.e. the minimum learning rate reached after many years of repetitions (usually about 200 items/year/min)
 >
 > 
->NewItems=aar*(3*e-0.3*year+1)
+>NewItems=aar\*(3\*e^(-0.3*year)+1)
 > 
 >式中：
 > 
@@ -208,7 +208,7 @@ As the time necessary for repetitions of a single item is almost independent of 
 
 The greatest overall [knowledge acquisition rate](https://supermemo.guru/wiki/Knowledge_acquisition_rate) is obtained for the [forgetting index](https://supermemo.guru/wiki/Forgetting_index) of about 20-30%. This results from the trade-off between reducing the repetition workload and increasing the relearning workload as the forgetting index progresses upward. In other words, high values of the forgetting index result in longer [intervals](https://supermemo.guru/wiki/Interval), but the gain is offset by an additional workload coming from a greater number of forgotten [items](https://supermemo.guru/wiki/Item) that have to be relearned.
 
-当[遗忘系数](https://supermemo.guru/wiki/Forgetting_index)约为 20-30%时，总的[知识获取率](https://supermemo.guru/wiki/Knowledge_acquisition_rate)最高。这是由于随着遗忘系数的上升，减少重复的学习负荷和增加重新学习的学习负荷之间的权衡。换句话说，更大的遗忘系数导致更长的[间隔](https://supermemo.guru/wiki/Interval)，但是必须重新学习的大量遗忘[项目](https://supermemo.guru/wiki/Item)带来的额外学习负荷抵消了这一收益。
+当[遗忘系数](https://supermemo.guru/wiki/Forgetting_index)约为 20 - 30%时，总的[知识获取率](https://supermemo.guru/wiki/Knowledge_acquisition_rate)最高。这是由于随着遗忘系数的上升，减少重复的学习负荷和增加重新学习的学习负荷之间的权衡。换句话说，更大的遗忘系数导致更长的[间隔](https://supermemo.guru/wiki/Interval)，但是必须重新学习的大量遗忘[项目](https://supermemo.guru/wiki/Item)带来的额外学习负荷抵消了这一收益。
 
 For the forgetting index greater than 20%, the positive effect of long intervals on memory resulting from the [spacing effect](https://supermemo.guru/wiki/Spacing_effect) is offset by an increasing number of forgotten items.
 
