--- a/History of spaced repetition/04.1987 SuperMemo 1.0 for DOS.md
+++ b/History of spaced repetition/04.1987 SuperMemo 1.0 for DOS.md
@@ -4,7 +4,7 @@
 
 ## SuperMemo 1.0: day by day (1987)
 
-## SuperMemo 1.0: 一天接一天 (1987)
+## SuperMemo 1.0: 日志 (1987)
 
 [SuperMemo history page](http://super-memory.com/english/history.htm#1987) at *supermemo.com* says that "*Wozniak wrote his first SuperMemo in 16 evenings*". The reality was a bit more complex. Let me describe it in detail using the notes from the day.
 
