调整机翻文本

--- a/History of spaced repetition/05.1988 Two component of memory.md
+++ b/History of spaced repetition/05.1988 Two component of memory.md
@@ -4,9 +4,9 @@
 
 [Two-component model of long-term memory](https://supermemo.guru/wiki/Two-component_model_of_long-term_memory) lays at the foundation of [SuperMemo](https://supermemo.guru/wiki/SuperMemo), and is expressed explicitly in [Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17). It differentiates between how [stable](https://supermemo.guru/wiki/Stability) knowledge is in long term memory storage, and how [easy it is to retrieve](https://supermemo.guru/wiki/Retrievability). This remains a little known and quintessential fact of the theory of learning that one can be fluent and still remember poorly.
 
-Fluency is a poor measure of learning in the long term
+[长期记忆的双组分模型](https://supermemo.guru/wiki/two component_model_of_long-term_memory)是 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的基础，并在 [SM-17 算法](https://supermemo.guru/wiki/Algorithm_SM-17)中明确表示。它区别于[稳定性](https://supermemo.guru/wiki/Stability)和[可检索性](https://supermemo.guru/wiki/Retrievability)。这仍然是学习理论中一个鲜为人知的典型事实，即一个人可以流利，但记忆力仍然很差。
 
-[长期记忆的双组分模型](https://supermemo.guru/wiki/two component_model_of_long-term_memory)是 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的基础，并在 [SM-17 算法](https://supermemo.guru/wiki/Algorithm_SM-17)中明确表示。它区别于[稳定性](https://supermemo.guru/wiki/Stability)和[可检索性](https://supermemo.guru/wiki/Retrievability)。这仍然是一个鲜为人知的和典型的学习理论的事实，一个人可以流利，但仍然记得很差。
+Fluency is a poor measure of learning in the long term
 
 从长远来看，流利度并不能很好地衡量学习效果。
 
@@ -24,7 +24,7 @@ My work over [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) 
 
 I concluded that the status of a piece of knowledge stored in long-term memory can be described by two variables that I named: [stability](https://supermemo.guru/wiki/Stability) and [retrievability](https://supermemo.guru/wiki/Retrievability). Stability of memory tells you how long the memory can last in the storage. Retrievability tells you how easy it is to recall a piece of knowledge. Those two variables used to be conflated in memory research.
 
-我的结论是，存储在长期记忆中的知识的状态可以用两个变量来描述:[stability](https://supermemo.guru/wiki/Stability)和[retrievability](https://supermemo.guru/wiki/Retrievability)。内存的稳定性告诉您内存在存储中可以持续多长时间。可检索性告诉你回忆一段知识是多么容易。在记忆研究中，这两个变量常常被混为一谈。
+我的结论是，存储在长期记忆中的知识的状态可以用两个变量来描述：[稳定性](https://supermemo.guru/wiki/Stability)和[可检索性](https://supermemo.guru/wiki/Retrievability)。记忆的稳定性告诉您内存在存储中可以持续多长时间。可检索性告诉你回忆一段知识是多么容易。在记忆研究中，这两个变量常常被混为一谈。
 
 Amazingly, three decades after my observations, the idea of two components of memory is still to permeate mainstream memory research. In 2018, most of papers ignore the separation between the two variables and still rely on a single concept of *memory strength*. This leads to monumental confusion and slow progress in research.
 
@@ -72,45 +72,37 @@ We published our ideas with Drs [Janusz Murakowski](https://supermemo.guru/wiki/
 
 The concept of the two components of memory has parallels in prior research, esp. by [Bjork](https://supermemo.guru/wiki/Bjork).
 
-In the 1940s, scientists investigated habit strength and response strength as independent components of behavior in rats. Those concepts were later reformulated in Bjork's disuse theory. Herbert Simon seems to have noticed the [need for memory stability variable in his paper in 1966](https://supermemo.guru/wiki/Herbert_Simon_predicted_two_component_model_of_memory). In 1969, [Robert Bjork](https://supermemo.guru/wiki/Robert_Bjork) formulated the *Strength Paradox*: a reverse relationship between the probability of recall and the memory effect of a review. Note that his is a restatement of the [spacing effect](https://supermemo.guru/wiki/Spacing_effect) in terms of the [two component model](https://supermemo.guru/wiki/Two_component_model), which is just a short step away from formulating the distinction between the variables of memory. This led to [Bjork's New Theory of Disuse (1992)](https://www.researchgate.net/profile/Robert_Bjork/publication/281322665_A_new_theory_of_disuse_and_an_old_theory_of_stimulus_fluctuation/links/58b6f20945851591c5d55e96/A-new-theory-of-disuse-and-an-old-theory-of-stimulus-fluctuation.pdf) that would distinguish between the storage strength and the retrieval strength. Those are close equivalents of [retrievability](https://supermemo.guru/wiki/Retrievability) and [stability](https://supermemo.guru/wiki/Stability) with a slightly different interpretation of the mechanisms that underlie the distinction. Most strikingly, Bjork believes that when [retrievability](https://supermemo.guru/wiki/Retrievability) drops to zero, stable memories are still retained (in our model, stability becomes indeterminate). At the cellular level, Bjork might be right, at least for a while, but practise of [SuperMemo](https://supermemo.guru/wiki/SuperMemo) shows the power of [complete forgetting](https://supermemo.guru/wiki/Complete_forgetting), while, from the neural point of view, retaining memories in disuse would be highly inefficient independent of their [stability](https://supermemo.guru/wiki/Stability). Last but not least, Bjork defines storage strength in terms of connectivity, which is very close to what I believe happens in good students: [coherence](https://supermemo.guru/wiki/Coherence) affects [stability](https://supermemo.guru/wiki/Stability).
-
 记忆的两个组成部分的概念在以前的研究中有相似之处，特别是在[Bjork](https://supermemo.guru/wiki/Bjork)。
 
-
+In the 1940s, scientists investigated habit strength and response strength as independent components of behavior in rats. Those concepts were later reformulated in Bjork's disuse theory. Herbert Simon seems to have noticed the [need for memory stability variable in his paper in 1966](https://supermemo.guru/wiki/Herbert_Simon_predicted_two_component_model_of_memory). In 1969, [Robert Bjork](https://supermemo.guru/wiki/Robert_Bjork) formulated the *Strength Paradox*: a reverse relationship between the probability of recall and the memory effect of a review. Note that his is a restatement of the [spacing effect](https://supermemo.guru/wiki/Spacing_effect) in terms of the [two component model](https://supermemo.guru/wiki/Two_component_model), which is just a short step away from formulating the distinction between the variables of memory. This led to [Bjork's New Theory of Disuse (1992)](https://www.researchgate.net/profile/Robert_Bjork/publication/281322665_A_new_theory_of_disuse_and_an_old_theory_of_stimulus_fluctuation/links/58b6f20945851591c5d55e96/A-new-theory-of-disuse-and-an-old-theory-of-stimulus-fluctuation.pdf) that would distinguish between the storage strength and the retrieval strength. Those are close equivalents of [retrievability](https://supermemo.guru/wiki/Retrievability) and [stability](https://supermemo.guru/wiki/Stability) with a slightly different interpretation of the mechanisms that underlie the distinction. Most strikingly, Bjork believes that when [retrievability](https://supermemo.guru/wiki/Retrievability) drops to zero, stable memories are still retained (in our model, stability becomes indeterminate). At the cellular level, Bjork might be right, at least for a while, but practise of [SuperMemo](https://supermemo.guru/wiki/SuperMemo) shows the power of [complete forgetting](https://supermemo.guru/wiki/Complete_forgetting), while, from the neural point of view, retaining memories in disuse would be highly inefficient independent of their [stability](https://supermemo.guru/wiki/Stability). Last but not least, Bjork defines storage strength in terms of connectivity, which is very close to what I believe happens in good students: [coherence](https://supermemo.guru/wiki/Coherence) affects [stability](https://supermemo.guru/wiki/Stability).
 
 在20世纪40年代，科学家们研究了习惯强度和反应强度作为行为的独立组成部分。这些概念后来在比约克的废用理论中得到了重新表述。赫伯特•西蒙(Herbert Simon)似乎在1966年的论文中注意到了(需要内存稳定性变量)(https://supermemo.guru/wiki/Herbert_Simon_predicted_two_component_model_of_memory)。1969年，[Robert Bjork](https://supermemo.guru/wiki/Robert_Bjork)提出了“强度悖论”:回忆的概率与回顾的记忆效果之间的反向关系。注意，他在[two component model](https://supermemo.guru/wiki/Spacing_effect)中重述了[间距效应](https://supermemo.guru/wiki/Two_component_model)，这离明确内存变量之间的区别只有一步之遥。这导致(比约克的废弃的新理论》(1992))(https://www.researchgate.net/profile/Robert_Bjork/publication/281322665_A_new_theory_of_disuse_and_an_old_theory_of_stimulus_fluctuation/links/58b6f20945851591c5d55e96/A-new-theory-of-disuse-and-an-old-theory-of-stimulus-fluctuation.pdf),区分存储能力和检索能力。它们与[可检索性](https://supermemo.guru/wiki/Retrievability)和[稳定性](https://supermemo.guru/wiki/Stability)非常相似，但对两者区别背后的机制的解释略有不同。最引人注目的是，Bjork认为当[可检索性](https://supermemo.guru/wiki/Retrievability)降到0时，稳定的内存仍然保留(在我们的模型中，稳定性变得不确定)。在细胞水平,比约克可能是正确的,至少有一段时间,但练习(SuperMemo) (https://supermemo.guru/wiki/SuperMemo)显示(完全忘记)(https://supermemo.guru/wiki/Complete_forgetting)的力量,同时,从神经的角度来看,留住记忆在停止使用会非常低效的独立的(稳定)(https://supermemo.guru/wiki/Stability)。最后但并非最不重要的是，Bjork根据连通性定义了存储强度，这与我认为好学生的情况非常接近:[coherence](https://supermemo.guru/wiki/Coherence)影响[稳定性](https://supermemo.guru/wiki/Stability)。
 
 Why aren't the two components of memory entering mainstream research yet? I claim that if human mind tends to be short-sighted, and we all are, by design, the mind of science can be truly strangulated by strenuous duties, publish or perish, battles for grants, hierarchies, conflict of interest, [peer review](https://supermemo.guru/wiki/Peer_review), teaching obligations, and even the code of conduct. Memory researchers tend to live in a single dimension of "memory strength". In that dimension, they cannot truly appreciate true dynamics of molecular and neural processes that need to be investigated to crack the problem. Ironically, progress may come from those who tend to work in artificial intelligence or neural networks. Prodigious minds of [Demis Hassabis](https://en.wikipedia.org/wiki/Demis_Hassabis) or [Andreas Knoblauch](https://scholar.google.de/citations?user=xVXueeQAAAAJ&hl=en) come up with twin ideas by independent reasoning process, models, and simulations. Biologists will need to listen to the language of mathematics and/or computer science.
 
-记忆的两个组成部分的概念在以前的研究中有相似之处，特别是在[Bjork](https://supermemo.guru/wiki/Bjork)。
-
-
-
 为什么记忆的两个组成部分还没有进入主流研究领域?我断言,如果人类思维往往是短视的,我们都是,通过设计,科学的思想可以通过艰苦的工作,真正绞窄的发布或灭亡,争夺赠款、层次结构、利益冲突,同行评审(https://supermemo.guru/wiki/Peer_review),教学义务,甚至行为准则。记忆研究者倾向于生活在“记忆强度”的单一维度中。在这个维度上，他们无法真正理解需要研究才能解决问题的分子和神经过程的真正动力学。具有讽刺意味的是，进步可能来自那些倾向于从事人工智能或神经网络工作的人。[Demis Hassabis](https://en.wikipedia.org/wiki/Demis_Hassabis)或[Andreas Knoblauch](https://scholar.google.de/citations?生物学家将需要倾听数学和/或计算机科学的语言。
 
 ## Two component model in Algorithm SM-17
 
-## 算法SM-17中的双组分模型
+## 算法 SM-17 中的双组分模型
 
 The [two component model of long-term memory](https://supermemo.guru/wiki/Two_component_model_of_long-term_memory) underlies [Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17). The success of Algorithm SM-17 is the ultimate practical proof for the correctness of the model.
 
+[长期内存的两个组件模型](https://supermemo.guru/wiki/Two_component_model_of_long-term_memory)是 [Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17) 的基础。算法SM-17 的成功，是该模型正确性的最终实践证明。
+
 A graph of actual changes in the value of the two components of memory provides a conceptual visualization of the evolving memory status:
 
-[长期内存的两个组件模型](https://supermemo.guru/wiki/Two_component_model_of_long-term_memory)是[Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17)的基础。算法SM-17的成功，是该模型正确性的最终实践证明。
-
-
-
-记忆的两个组成部分价值的实际变化图提供了演变中的记忆状况的概念可视化:
+记忆的两个组成部分价值的实际变化图提供了演变中的记忆状况的概念可视化：
 
 [![SuperMemo: Changes in two variables of long-term memory](https://supermemo.guru/images/thumb/5/57/Memory_status.jpg/800px-Memory_status.jpg)](https://supermemo.guru/wiki/File:Memory_status.jpg)
 
-> ***Figure:** Changes in memory status over time for an exemplary piece of knowledge. The horizontal axis represents time spanning the entire repetition history. The top panel shows retrievability (tenth power, R10, for easier analysis). Retrievability grid in gray is labelled by R=99%, R=98%, etc. The middle panel displays optimum intervals in navy. Repetition dates are marked by blue vertical lines and labelled in aqua. The end of the optimum interval where R crosses 90% line is marked by red vertical lines (only if intervals are longer than optimum intervals). The bottom panel visualizes stability (presented as ln(S)/ln(days) for easier analysis). The graph shows that retrievability drops fast (exponentially) after early repetitions when stability is low, however, it only drops from 100% to 94% in long 10 years after the 7th review. All values are derived from an actual repetition history and the three component model of memory.*
+> **Figure:** Changes in memory status over time for an exemplary piece of knowledge. The horizontal axis represents time spanning the entire repetition history. The top panel shows retrievability (tenth power, R10, for easier analysis). Retrievability grid in gray is labelled by R=99%, R=98%, etc. The middle panel displays optimum intervals in navy. Repetition dates are marked by blue vertical lines and labelled in aqua. The end of the optimum interval where R crosses 90% line is marked by red vertical lines (only if intervals are longer than optimum intervals). The bottom panel visualizes stability (presented as ln(S)/ln(days) for easier analysis). The graph shows that retrievability drops fast (exponentially) after early repetitions when stability is low, however, it only drops from 100% to 94% in long 10 years after the 7th review. All values are derived from an actual repetition history and the three component model of memory.
 >
-> ***图片：**记忆状态随着时间的推移而发生变化。横轴表示跨越整个重复历史的时间。顶部面板显示可检索性(第十次幂，R10，便于分析)。灰色网格的可检索性指标分别为R=99%、R=98%等。中间的面板显示海军的最佳间隔。重复日期用蓝色竖线标记，并以水标记。当R越过90%线时，最佳区间的末端用红色竖线表示(仅当区间大于最佳区间时)。下面板显示稳定性(以ln(S)/ln(days)表示，便于分析)。从图中可以看出，当稳定性较低时，早期重复后的可检索性下降较快(指数级)，但在第7次复习后的10年时间里，可检索性仅从100%下降到94%。所有的值都来自一个实际的重复历史和内存的三个组件模型。
+> **图片：**记忆状态随着时间的推移而发生变化。横轴表示跨越整个重复历史的时间。顶部面板显示可检索性(第十次幂，R10，便于分析)。灰色网格的可检索性指标分别为R=99%、R=98%等。中间的面板显示海军的最佳间隔。重复日期用蓝色竖线标记，并以水标记。当R越过90%线时，最佳区间的末端用红色竖线表示(仅当区间大于最佳区间时)。下面板显示稳定性(以ln(S)/ln(days)表示，便于分析)。从图中可以看出，当稳定性较低时，早期重复后的可检索性下降较快(指数级)，但在第7次复习后的10年时间里，可检索性仅从100%下降到94%。所有的值都来自一个实际的重复历史和内存的三个组件模型。
 
 Due to the fact that a real-life application of [SuperMemo](https://supermemo.guru/wiki/SuperMemo) requires tackling learning material of varying difficulty, the third variable involved in the model is [item difficulty](https://supermemo.guru/wiki/Item_difficulty) (D). Some of the implications of item difficulty have also been discussed in [this article](https://supermemo.guru/wiki/History_of_spaced_repetition). In particular, the impact of composite memories with subcomponents of different memory stability (S).
 
-因为一个现实生活中的应用[SuperMemo] (https://supermemo.guru/wiki/SuperMemo)需要解决不同难度的学习材料,模型中所涉及的第三个变量(项困难)(https://supermemo.guru/wiki/Item_difficulty) (D)。一些项目难度的影响也一直在讨论这篇文章(https://supermemo.guru/wiki/History_of_spaced_repetition)。特别是具有不同子成分的复合记忆对记忆稳定性的影响。
+因为一个现实生活中的应用 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 需要解决不同难度的学习材料,模型中所涉及的第三个变量(项困难)(https://supermemo.guru/wiki/Item_difficulty) (D)。一些项目难度的影响也一直在讨论这篇文章(https://supermemo.guru/wiki/History_of_spaced_repetition)。特别是具有不同子成分的复合记忆对记忆稳定性的影响。
 
 For the purpose of the new algorithm we have defined the three components of memory as follows:
 
@@ -129,21 +121,19 @@ For the purpose of the new algorithm we have defined the three components of mem
 
 Archive warning: [Why use literal archives?](https://supermemo.guru/wiki/Why_use_literal_archives%3F)
 
-This text was part of: "*Optimization of learning*" by [Piotr Wozniak](https://supermemo.guru/wiki/Piotr_Wozniak) (1990)
-
 档案警告:为什么使用literal archives?
 
+This text was part of: "*Optimization of learning*" by [Piotr Wozniak](https://supermemo.guru/wiki/Piotr_Wozniak) (1990)
 
-
-这篇文章是[Piotr Wozniak]的一部分:“改进学习”(https://supermemo.guru/wiki/Piotr_Wozniak) (1990)
+这篇文章是：“改进学习” (1990)[Piotr Wozniak](https://supermemo.guru/wiki/Piotr_Wozniak) 的一部分
 
 **10.4.2. Two variables of memory: stability and retrievability**
 
-**10.4.2。内存的两个变量:稳定性和可检索性**
+**10.4.2. 内存的两个变量:稳定性和可检索性**
 
 There is an important conclusion that comes directly from the SuperMemo theory that there are two, and not one, as it is commonly believed, independent variables that describe the conductivity of a synapse and memory in general. To illustrate the case, let us again consider the calpain model of synaptic memory. It is obvious from the model, that its authors assume that only one independent variable is necessary to describe the conductivity of a synapse. Influx of calcium, activity of calpain, degradation of fodrin and number of glutamate receptors are all examples of such a variable. Note that all the mentioned parameters are dependent, i.e. knowing one of them we could calculate all others; obviously only in the case if we were able to construct the relevant formulae. The dependence of the parameters is a direct consequence of causal links between all of them.
 
-有一个重要的结论直接来自于SuperMemo理论，那就是有两个，而不是像人们通常认为的那样，一个是描述突触电导率和一般记忆的自变量。为了说明这种情况，让我们再次考虑突触记忆的calpain模型。从模型中可以明显看出，作者假设只有一个自变量是描述突触电导率所必需的。钙的流入、钙蛋白酶的活性、fodrin的降解和谷氨酸受体的数量都是这种变量的例子。注意，上述所有参数都是相关的，即知道其中一个参数就可以计算出其他所有参数;显然，只有在我们能够构造出相关公式的情况下。参数的依赖性是所有参数之间因果关系的直接结果。
+有一个重要的结论直接来自于 SuperMemo 理论，那就是有两个，而不是像人们通常认为的那样，一个是描述突触电导率和一般记忆的自变量。为了说明这种情况，让我们再次考虑突触记忆的calpain模型。从模型中可以明显看出，作者假设只有一个自变量是描述突触电导率所必需的。钙的流入、钙蛋白酶的活性、fodrin的降解和谷氨酸受体的数量都是这种变量的例子。注意，上述所有参数都是相关的，即知道其中一个参数就可以计算出其他所有参数;显然，只有在我们能够构造出相关公式的情况下。参数的依赖性是所有参数之间因果关系的直接结果。
 
 However, the process of optimal learning requires exactly two independent variables to describe the state of a synapse at a given moment:
 
@@ -161,23 +151,17 @@ However, the process of optimal learning requires exactly two independent variab
 
 然而，最优学习过程恰好需要两个自变量来描述突触在给定时刻的状态:
 
+- 一个变量，发挥时钟的作用，测量重复之间的时间。可在此使用的示例参数如下:
 
+    - Te -上次重复后已经过的时间(范围<0，最佳间隔>)，
+    - Tl -下一次重复之前必须经过的时间(Tl=最佳间隔- te)，
+    - Pf -突触在白天丢失记忆痕迹的概率(它属于<0,1>范围)。
 
--一个变量，发挥时钟的作用，测量重复之间的时间。可在此使用的示例参数如下:
+- 一个衡量记忆持久性的变量。可在此使用的示例参数如下:
 
-- Te -上次重复后已经过的时间(范围<0，最佳间隔>)，
-
-- Tl -下一次重复之前必须经过的时间(Tl=最佳间隔- te)，
-
-- Pf -突触在白天丢失记忆痕迹的概率(它属于<0,1>范围)。
-
--一个衡量记忆持久性的变量。可在此使用的示例参数如下:
-
-- I(n+1) -下一次重复后应使用的最优区间(I(n+1)=I(n)*C，其中C是一个大于3的常数)，
-
-- I(n) -电流最优区间，
-
-- n -所述时刻之前的重复次数，等等。
+    - I(n+1) -下一次重复后应使用的最优区间(I(n+1)=I(n)*C，其中C是一个大于3的常数)，
+    - I(n) -电流最优区间，
+    - n -所述时刻之前的重复次数，等等。
 
 Let us now see if the above variables are necessary and sufficient to characterize the state of synapses in the process of time-optimal learning. To show that variables are independent, we will show that none of them can be calculated from the other. Let us notice that the I(n) parameter remains constant during a given inter-repetition interval, while the Te parameter changes from zero to I(n). This shows that there is no function f that satisfies the condition:
 
@@ -242,11 +226,11 @@ Retrievability and stability are both necessary to code for a process of learnin
 
 ## Proof by Murakowski
 
-## Murakowski证明
+## Murakowski 的证明
 
 Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Murakowski):
 
-这里有一份由[Murakowski]提交的证据(https://supermemo.guru/wiki/Janusz_Murakowski):
+这里有一份由 [Murakowski](https://supermemo.guru/wiki/Janusz_Murakowski) 提交的证据：
 
 > It has been found in earlier research that the [optimum spacing of repetitions](https://supermemo.guru/wiki/Spaced_repetition) in paired-associate learning, understood as the spacing which takes a minimum number of repetitions to indefinitely maintain a constant level of knowledge retention (e.g. 95%), can roughly be expressed using the following formulae ([Wozniak and Gorzelanczyk 1994](https://supermemo.guru/wiki/Optimization_of_repetition_spacing_in_the_practice_of_learning)):
 >
@@ -313,7 +297,7 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 
 ## Two components of memory in SuperMemo
 
-## SuperMemo中的两个内存组件
+## SuperMemo 中的两个记忆组件
 
 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) has always been based on the [two component model of memory](https://supermemo.guru/wiki/Two_component_model_of_memory), which emerged in an increasingly explicit form over the last three decades. The constant C2 in Eqn. (2) in Murakowski proof above represents [stability increase](https://supermemo.guru/wiki/Stability_increase). In 2018, stability increase is represented in [SuperMemo](https://supermemo.guru/wiki/SuperMemo) as matrix *SInc[]*. C2 says how much inter-repetition intervals should increase in learning to meet the criteria of admissible level of forgetting. In reality, C2 is not a constant. It depends on a number of factors. Of these, the most important are:
 
@@ -321,7 +305,7 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 - [memory stability](https://supermemo.guru/wiki/Memory_stability) (S): the more lasting/durable the memory, the smaller the C2 value
 - probability of recall ([retrievability](https://supermemo.guru/wiki/Retrievability))(R): the lower the probability of recall, the higher the C2 value (i.e. due to the [spacing effect](https://supermemo.guru/wiki/Spacing_effect), items are remembered better if reviewed with delay)
 
-[SuperMemo](https://supermemo.guru/wiki/SuperMemo)一直基于[two component model of memory](https://supermemo.guru/wiki/Two_component_model_of_memory)，后者在过去三十年中以一种越来越显式的形式出现。Eqn中的常数C2。(2)在Murakowski的证明中，上述代表[stability increase](https://supermemo.guru/wiki/Stability_increase)。在2018年，稳定性的提高体现在[SuperMemo](https://supermemo.guru/wiki/SuperMemo)中，矩阵*SInc[]*。C2说，为了满足可接受遗忘水平的标准，学习中应该增加多少重复间隔。实际上，C2不是常数。这取决于许多因素。其中最重要的是:
+[SuperMemo](https://supermemo.guru/wiki/SuperMemo) 一直基于[two component model of memory](https://supermemo.guru/wiki/Two_component_model_of_memory)，后者在过去三十年中以一种越来越显式的形式出现。Eqn中的常数C2。(2)在 Murakowski 的证明中，上述代表[stability increase](https://supermemo.guru/wiki/Stability_increase)。在2018年，稳定性的提高体现在[SuperMemo](https://supermemo.guru/wiki/SuperMemo)中，矩阵*SInc[]*。C2说，为了满足可接受遗忘水平的标准，学习中应该增加多少重复间隔。实际上，C2不是常数。这取决于许多因素。其中最重要的是:
 
 - 项目难度(D)(见:【复杂度】(https://supermemo.guru/wiki/Complexity)):记忆的信息越难，C2越小(也就是说，难的材料必须经常复习)
 - [内存稳定性](https://supermemo.guru/wiki/Memory_stability) (S):内存越持久/持久，C2值越小
