修改术语翻译

--- a/I would never send my kids to school/22.glossary-shu-yu-biao.md
+++ b/I would never send my kids to school/22.glossary-shu-yu-biao.md
@@ -131,7 +131,7 @@ This terminology is used in [my](https://supermemo.guru/wiki/Piotr_Wozniak) arti
 * [Toxic memory](https://supermemo.guru/wiki/Toxic_memory) - persistent memory that leads to anxiety
 * [毒性记忆](https://supermemo.guru/wiki/Toxic_memory)——导致焦虑的顽固记忆
 * [Two-component model of long-term memory](https://supermemo.guru/wiki/Two-component_model_of_long-term_memory) - model of memory based on [retrievability](https://supermemo.guru/wiki/Retrievability) and [stability](https://supermemo.guru/wiki/Stability) of memories
-* [长期记忆的双组件模型](https://supermemo.guru/wiki/Two-component_model_of_long-term_memory)——基于记忆[可提取性](https://supermemo.guru/wiki/Retrievability)和[稳定性](https://supermemo.guru/wiki/Stability)的记忆模型
+* [长期记忆的双组分模型](https://supermemo.guru/wiki/Two-component_model_of_long-term_memory)——基于记忆[可提取性](https://supermemo.guru/wiki/Retrievability)和[稳定性](https://supermemo.guru/wiki/Stability)的记忆模型
 * [Two-process model of sleep regulation](https://supermemo.guru/wiki/Two-process_model_of_sleep_regulation) - model that explains why and when we fall asleep
 * [睡眠调节的双过程模型](https://supermemo.guru/wiki/Two-process_model_of_sleep_regulation)——解释我们为什么以及何时进入睡眠状态的模型
 * [Unschooling](https://supermemo.guru/wiki/Unschooling) - learning without the pressure of the curriculum
